force-app/main/default/objects/Litmos_Team__c/Litmos_Team__c.object-meta.xml
<CustomObject>
    <label>Litmos Team</label>
    <nameField>
        <label>Litmos Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litmos Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>