force-app/main/default/objects/Litmos_Team__c/fields/Litmos_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Id__c</fullName>
    <description>Id obtained from Litmos</description>
    <externalId>true</externalId>
    <label>Litmos Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>