force-app/main/default/objects/Litmos_Team__c/fields/Litmos_Parent_Team__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Parent_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds parent team</description>
    <label>Litmos Parent Team</label>
    <referenceTo>Litmos_Team__c</referenceTo>
    <relationshipLabel>Litmos Sub-Teams</relationshipLabel>
    <relationshipName>Litmos_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>