force-app/main/default/objects/Litmos_Team__c/fields/Number_of_Subteams__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subteams__c</fullName>
    <formula>Trigger_Number_of_Subteams__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Subteams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>