force-app/main/default/objects/Litmos_Team__c/fields/Number_of_Team_Admins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Team_Admins__c</fullName>
    <label>Number of Team Admins</label>
    <summaryFilterItems>
        <field>Litmos_Team_Member__c.Member_Type__c</field>
        <operation>equals</operation>
        <value>Admin</value>
    </summaryFilterItems>
    <summaryForeignKey>Litmos_Team_Member__c.Litmos_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>