force-app/main/default/objects/Litmos_Team__c/fields/Number_of_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Team_Members__c</fullName>
    <label>Number of Team Members</label>
    <summaryForeignKey>Litmos_Team_Member__c.Litmos_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>