force-app/main/default/objects/Litmos_Team__c/fields/Team_Code_for_Bulk_Import__c.field-meta.xml
<CustomField>
    <fullName>Team_Code_for_Bulk_Import__c</fullName>
    <description>Holds code for bulk import</description>
    <label>Team Code for Bulk Import</label>
    <length>80</length>
    <type>Text</type>
</CustomField>