force-app/main/default/objects/Litmos_Team__c/fields/Trigger_Number_of_Subteams__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Number_of_Subteams__c</fullName>
    <description>Holds the total number of subteams. Does not include subteams of children. Populated by trigger. Formula field will be used to display on record page.</description>
    <label>Trigger Number of Subteams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>