force-app/main/default/objects/Litmos_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Litmos_Parent_Team__c</columns>
    <columns>Number_of_Subteams__c</columns>
    <columns>Number_of_Team_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>